--- a/rootfs/etc/supervisor.d/selkies-gstreamer.ini
+++ b/rootfs/etc/supervisor.d/selkies-gstreamer.ini
@@ -3,7 +3,7 @@
 autostart=true
 autorestart=true
 priority=20
-user=root
+user=%(ENV_USER)s
 command=/usr/bin/selkies-gstreamer.sh
 environment=HOME="/home/%(ENV_USER)s",USER="%(ENV_USER)s"
 stopsignal=INT
@@ -13,3 +13,15 @@ stdout_logfile_backups=7
 stderr_logfile=/var/log/supervisor/selkies-gstreamer.err.log
 stderr_logfile_maxbytes=10MB
 stderr_logfile_backups=7
+
+[program:nginx]
+command=bash -c "until nc -z localhost ${SELKIES_PORT:-8081}; do sleep 0.5; done; /usr/sbin/nginx -g \"daemon off;\""
+stdout_logfile=/var/log/supervisor/nginx.log
+stdout_logfile_maxbytes=5MB
+stdout_logfile_backups=0
+redirect_stderr=true
+stopasgroup=true
+stopsignal=INT
+autostart=true
+autorestart=true
+priority=30
