user dbus success

--- a/rootfs/etc/supervisor.d/dbus.ini
+++ b/rootfs/etc/supervisor.d/dbus.ini
@@ -5,8 +5,8 @@ autostart=true
 autorestart=true
 directory=/
 user=%(ENV_USER)s
-command=bash -c "until [ -d \"${XDG_RUNTIME_DIR}\" ]; do sleep 0.5; done; dbus-daemon --system --nofork --nosyslog --nopidfile --address=\"${DBUS_SYSTEM_BUS_ADDRESS}\""
-environment=HOME="/home/%(ENV_USER)s",USER="%(ENV_USER)s",DISPLAY="%(ENV_DISPLAY)s",XDG_RUNTIME_DIR="%(ENV_XDG_RUNTIME_DIR)s",DBUS_SYSTEM_BUS_ADDRESS="%(ENV_DBUS_SYSTEM_BUS_ADDRESS)s"
+command=dbus-daemon --config-file=/usr/share/dbus-1/system.conf --nofork --nopidfile
+environment=HOME="/home/%(ENV_USER)s",USER="%(ENV_USER)s"
 stopsignal=INT
 stdout_logfile=/var/log/supervisor/dbus.log
 stdout_logfile_maxbytes=10MB
