--- a/rootfs/etc/supervisor.d/desktop.ini
+++ b/rootfs/etc/supervisor.d/desktop.ini
@@ -5,7 +5,7 @@ autostart=true
 autorestart=true
 user=%(ENV_USER)s
 directory=/home/%(ENV_USER)s
-command=/usr/bin/start-desktop.sh
+command=dbus-run-session -- /usr/bin/start-desktop.sh
 environment=HOME="/home/%(ENV_USER)s",USER="%(ENV_USER)s",DISPLAY="%(ENV_DISPLAY)s",XDG_RUNTIME_DIR="%(ENV_XDG_RUNTIME_DIR)s"
 stopsignal=INT
 stdout_logfile=/var/log/supervisor/desktop.log
